--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "url": "https://github.com/goitacademy/parcel-project-template/issues"
   },
   "dependencies": {
+    "@vimeo/player": "^2.18.0",
     "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
+    "firebase": "^9.13.0",
     "modern-normalize": "^1.1.0",
     "notiflix": "^3.2.5",
     "simplelightbox": "^2.10.4"
